@@ -1,3 +1,9 @@
+Changes with APR b1
+
+  *) Add apr_getnameinfo(), a replacement for apr_get_hostname() which
+     supports IPv6 and will be friendlier for use with eventual 
+     SOCK_DGRAM support.  [Jeff Trawick]
+
 Changes with APR a9
 
   *) Removed the iconv implementation from the i18n/unix/iconv branch.
